--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@ code {
   transform: translateX(-50%);
 }
 
+#thanks-modal {
+  position: fixed;
+  top: 100px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .footer {
   background: white;
   position: fixed;
