--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,15 @@ code {
   padding-bottom: 5px;
 }
 
+#confirm-modal {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
 .text-lightgrey {
   color: #c2c2c2;
 }
